--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>React boilerplate</title>
+    <title>Gif Search</title>
   </head>
   <body>
+    <div class="title">
+      <h1 class="text-center">Gif Search</h1>
+    </div>
     <div id="root"></div>
   </body>
 </html>
